# bobvoice

./: README.md  index.html  main.py  mypy.ini  pyproject.toml  ruff.toml
frontend/: app.js  index.html  manifest.json  style.css
lessons/: beginner_french_01.md  beginner_french_02.md  beginner_french_03.md  beginner_french_04.md  beginner_french_05.md  beginner_french_06.md  beginner_french_07.md  beginner_french_08.md  beginner_french_09.md  beginner_french_10.md
prompts/: beginner_french.txt  french_teacher.txt  portuguese_teacher.txt
src/bobvoice/: main.py  openclaw.py  session_store.py  stt.py  tts.py  ws_protocol.py
tests/: conftest.py  test_main.py  test_openclaw.py  test_stt.py  test_ws_protocol.py
