[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bobvoice"]

[project]
name = "bobvoice"
version = "0.1.0"
description = "Local voice interface for talking to AI assistant Bob/OpenClaw from mobile devices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "faster-whisper>=1.2.1",
    "soundfile>=0.13.1",
    "numpy>=2.0.0",
    "cryptography>=44.0.0",
    "omnivoice>=0.1.4",
    "torch>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "websockets>=16.0",
]
